locked screen, got rid of gaps and fixed corners

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 /* This adds padding so content doesn't get stuck to navbar*/
 .main-content {
-  padding: 40px 20px;
+  padding: 50px 20px;
   max-width: 900px;
   margin: 0 auto;
 }
